--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
 
 .input_text {
   font-size: 12px;
-  margin-left:10px
 }
 
 input[type=text],
@@ -39,10 +38,11 @@ color: #400070;
 }
 
 #map {
-  bottom:0px;
+  top:40px;
   height: 100%;
   /* left: 260px; */
   /* left : 260px; */
+  /* float: left; */
   position: absolute;
   right: 0px;
 }
@@ -56,4 +56,25 @@ color: #400070;
   /*padding: 10px 10px 30px 10px;*/
   text-align: left;
   width: 250px;
+}
+
+
+
+@media only screen and (min-width: 0) and (max-width: 500px)  {
+  .ko_font {
+    font-size: 8px;
+  }
+}
+
+
+
+@media only screen and (min-width: 500) and (max-width: 750px)  {
+  .ko_font {
+    font-size: 16px;
+  }
+}
+@media only screen and (min-width: 750) {
+    .ko_font {
+    font-size: 16px;
+    }
 }
