--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@ html,
 body {
   font-family: Arial, sans-serif;
   height: 100%;
-  margin: 10;
-  padding: 10px;
+
   background-color: white;
 }
 
@@ -21,9 +20,13 @@ select.form-control {
     /* background: transparent; */
     border: none;
     border-bottom: 1px solid #000000;
+    padding: 20px;
     -webkit-box-shadow: none;
     box-shadow: none;
+    box-sizing : border-box;
 }
+
+
 
 input[type="text"]:focus,
 select.form-control:focus {
@@ -32,14 +35,16 @@ select.form-control:focus {
 }
 
 .h1b{
-font-size: 18px;
+font-size: 22px;
 font-family: -webkit-pictograph;
 color: #400070;
+text-align: center;
+padding: 20px;
 }
 
 #map {
-  top:40px;
-  height: 100%;
+  top:80px;
+  height: 85%;
   /* left: 260px; */
   /* left : 260px; */
   /* float: left; */
@@ -47,23 +52,31 @@ color: #400070;
   right: 0px;
 }
 
-.options-box {
-  background: #ffe;
-  border: 1px solid #999;
-  border-radius: 3px;
-  height: 100%;
-  line-height: 35px;
-  /*padding: 10px 10px 30px 10px;*/
-  text-align: left;
-  width: 250px;
-}
-
 
 
 @media only screen and (min-width: 0) and (max-width: 500px)  {
   .ko_font {
-    font-size: 8px;
+    font-size: 10px;
+    max-width: 70px;
+    white-space:normal !important;
   }
+  .h1b{
+  font-size: 15px;
+  font-family: -webkit-pictograph;
+  color: #400070;
+  }
+
+  #map {
+    top:80px;
+    height: 85%;
+     left: 100px;
+     margin-right: 5px;
+    /* left : 260px; */
+    /* float: left; */
+    position: absolute;
+    right: 10px;
+  }
+
 }
 
 
